--- a/aula 30-10/styles.css
+++ b/aula 30-10/styles.css
@@ -1,17 +1,34 @@
 p {
-    background-color: blue;
-   
-}
 
-.c1 { 
-    background-color: brown;
+    background-color:yellow
+
+}
+#p1 {
+
+    background-color: red;
     text-align: center;
-    color: antiquewhite;
+    color: white;
 }
 
-div { 
+.c1 {
 
-    width: 100px;
+    background-color: blue;
+    text-align: right;
+    color: red;
+}
+
+div {
+
+    width: 500px;
     height: 50px;
-    background-color: darkgreen;
+    background-color: yellow;
+    opacity: 0.6;
+}
+#d1 {
+     
+    border-style: solid;
+    border-color: orange;
+    padding-top: 40px;
+    padding-left: 50px;
+    margin-top: 40px;
 }
