--- a/aula 30-10/styles.css
+++ b/aula 30-10/styles.css
@@ -32,3 +32,43 @@ div {
     padding-left: 50px;
     margin-top: 40px;
 }
+
+table, td, th{
+border: 1px solid; 
+
+} 
+ 
+th{
+    background-color: cyan;
+
+
+}
+ td{
+   text-align: center;
+}
+table{
+width: 80%;
+
+}
+
+button{
+    width: 60%;
+text-align: center;
+margin-left: 200px;
+
+border:2px  ;
+
+
+}
+a:link, a:visited {
+    background-color: #f44336;
+    color: white;
+    padding: 14px 25px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+  }
+  
+  a:hover, a:active {
+    background-color: red;
+  }
