--- a/aula-19-11/style.css
+++ b/aula-19-11/style.css
@@ -6,24 +6,24 @@
 }
 
 
-.navbar {
+.barnav {
     background-color: #333;
     padding: 10px;
 }
-.nav-list ul {
+.nav-lista ul {
     display: flex;
     justify-content: center;
     list-style: none;
 }
-.nav-list ul li {
+.nav-lista ul li {
     margin: 15px;
 }
-.nav-list a {
+.nav-lista a {
     color: white;
     text-decoration: none;
     font-size: 18px;
 }
-.nav-list a:hover {
+.nav-lista a:hover {
     color: #0093dc;
 }
 
@@ -40,8 +40,16 @@
     display: flex;
     flex-direction: column;
 }
-.form-group {
+.form-grupo {
     margin-bottom: 15px;
+    
+}
+
+.form-container.termos div{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
 }
 label {
     margin-bottom: 5px;
