--- a/aula-10-12/styles.css
+++ b/aula-10-12/styles.css
@@ -78,7 +78,7 @@ label {
     font-size: 16px;
 }
 
-.grupo {
+.informacoes {
     margin-bottom: 15px;
     border-radius: 8px;
     padding: 20px;
