--- a/aula-10-12/styles.css
+++ b/aula-10-12/styles.css
@@ -62,7 +62,7 @@ h1 {
 }
 
 .cadastro {
-    max-width: 700px;
+    max-width: 100%;
     margin: 30px auto;
     padding: 20px;
     background-color: #f4f4f4;
@@ -70,6 +70,7 @@ h1 {
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     box-sizing: border-box;
     border: none;
+    display: flex;
     
 }
 
@@ -82,8 +83,10 @@ label {
     margin-bottom: 15px;
     border-radius: 8px;
     padding: 20px;
+
     
 }
+
 .tabela {
     width: 80%;
     margin: 50px auto;
@@ -94,12 +97,10 @@ label {
 
 }
 
-table {
-    width: 100%;
-    border-collapse: collapse;
-}
+
 table, th, td {
     border: 1px solid #ccc;
+    
 }
 th, td {
     padding: 12px;
@@ -137,3 +138,5 @@ input[type=text], input[type="email"], input[type="tel"], input[type="date"],sel
     border-radius: 8px;
     
 }
+
+
