--- a/aula-10-12/styles.css
+++ b/aula-10-12/styles.css
@@ -50,28 +50,19 @@ position: absolute;
     color: #0093dc;
 }
 
-.conteudo{
+.conteudo {
     background-color: #fff;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     margin: 10px;
 }
-h1 {
-    text-align: center;
-}
 
-.cadastro {
-    max-width: 100%;
-    margin: 30px auto;
-    padding: 20px;
-    background-color: #f4f4f4;
-    border-radius: 8px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    box-sizing: border-box;
-    border: none;
-    display: flex;
-    
+
+.partes {
+    display: flex; 
+    gap: 20px; 
+    margin-bottom: 15px; 
 }
 
 label {
@@ -111,8 +102,8 @@ th {
     color: white;
 }
 
-input[type=text], input[type="email"], input[type="tel"], input[type="date"],select{
-    width: 100%;
+input[type=text], input[type="email"], input[type="tel"], input[type="date"],select {
+    width: 500%;
     padding: 12px 20px;
     margin: 8px 0;
     display: inline-block;
