--- a/aula-10-12/style.css
+++ b/aula-10-12/style.css
@@ -1,9 +1,4 @@
-* { 
-   margin: 5px;
-   padding: 0;
-   box-sizing:border-box ;
-     
-}
+
 
 body {
 background: #d4d4d4;
@@ -58,24 +53,45 @@ position: absolute;
     margin: 10px;
 }
 
+form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
-.partes {
-    display: flex; 
-    gap: 20px; 
-    margin-bottom: 15px; 
+
+.informacoes{
+    margin-top: 3%;
+    width: 50px;
+    margin-right: 30%;
+    margin-left: 10%;
+    height: auto;
+    margin-bottom: 15px;
+
+}
+
+.cadrastro{
+    width: 50%;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    display: flex
+;
+}
+
+.linha-opcao {
+    padding: 15%;
+    display: flex;
+}
+
+p {
+    text-wrap: nowrap;
 }
 
 label {
     margin-bottom: 5px;
     font-size: 16px;
-}
-
-.informacoes {
-    margin-bottom: 15px;
-    border-radius: 8px;
-    padding: 20px;
-
-    
 }
 
 .tabela {
@@ -118,7 +134,7 @@ input[type=text], input[type="email"], input[type="tel"], input[type="date"],sel
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    width: 100%;
+    margin: 1%;
   }
 
 .rodape{
